[gd_scene load_steps=3 format=3 uid="uid://bolrwf2kmf1vr"]

[ext_resource type="Script" uid="uid://d03ybrr8yjq3y" path="res://scripts/level_graph/stage_cell_ui.gd" id="1_hiyc1"]

[sub_resource type="LabelSettings" id="LabelSettings_gh5p3"]
font_size = 12

[node name="StageCellUI" type="ReferenceRect"]
texture_filter = 1
custom_minimum_size = Vector2(50, 50)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1102.0
offset_bottom = -598.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
mouse_default_cursor_shape = 2
border_color = Color(0, 0, 0, 1)
editor_only = false
script = ExtResource("1_hiyc1")

[node name="MainTexture" type="TextureRect" parent="."]
custom_minimum_size = Vector2(32, 32)
layout_mode = 0
offset_left = 9.0
offset_top = 9.0
offset_right = 41.0
offset_bottom = 41.0
expand_mode = 1

[node name="SubTexture" type="TextureRect" parent="."]
custom_minimum_size = Vector2(22, 22)
layout_mode = 0
offset_left = 27.0
offset_top = 1.0
offset_right = 49.0
offset_bottom = 23.0
expand_mode = 2
stretch_mode = 3

[node name="Probability" type="Label" parent="."]
visible = false
layout_mode = 0
offset_right = 17.0
offset_bottom = 17.0
text = "0.5"
label_settings = SubResource("LabelSettings_gh5p3")
